tests/paczka1/small_fuzzy/67556128.err
Error in line 2: 3ADIVcbyiB A60 61,8
Error in line 6: aSVOdK3Nbl A60 47,2
Error in line 4: 3ADIVcbyiB S62 7,6
